--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "medific2",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.3.0",
+    "bootstrap": "^5.3.2",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
